# openapi.snapshot.json
@@ -1702,7 +1702,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -2051,7 +2051,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -2262,7 +2262,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -2358,7 +2358,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -2384,8 +2384,8 @@
           "200": {
             "description": "OK",
             "content": {
-              "application/json": {},
-              "application/octet-stream": {}
+              "application/json": { },
+              "application/octet-stream": { }
             }
           }
         }
@@ -2591,7 +2591,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -2637,7 +2637,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -2792,7 +2792,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -3084,7 +3084,7 @@
           "200": {
             "description": "OK",
             "content": {
-              "text/event-stream": {}
+              "text/event-stream": { }
             }
           }
         }
@@ -3214,8 +3214,8 @@
           "200": {
             "description": "OK",
             "content": {
-              "application/json": {},
-              "application/octet-stream": {}
+              "application/json": { },
+              "application/octet-stream": { }
             }
           }
         }
@@ -3267,7 +3267,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -3448,7 +3448,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -3573,8 +3573,8 @@
           "200": {
             "description": "OK",
             "content": {
-              "application/json": {},
-              "application/octet-stream": {}
+              "application/json": { },
+              "application/octet-stream": { }
             }
           }
         }
@@ -3747,7 +3747,7 @@
           "200": {
             "description": "OK",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -3973,7 +3973,7 @@
           "200": {
             "description": "OK",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -4190,7 +4190,7 @@
           "200": {
             "description": "OK",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -4363,7 +4363,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -4591,7 +4591,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -5073,7 +5073,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -5583,7 +5583,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -5851,7 +5851,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -6124,7 +6124,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -6434,7 +6434,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -6467,7 +6467,7 @@
           "204": {
             "description": "No Content",
             "content": {
-              "application/json": {}
+              "application/json": { }
             }
           }
         }
@@ -7841,6 +7841,16 @@
             "type": [
               "null",
               "string"
+            ]
+          },
+          "method": {
+            "oneOf": [
+              {
+                "type": "null"
+              },
+              {
+                "$ref": "#/components/schemas/PaymentMethodKind"
+              }
             ]
           }
         }
@@ -9406,7 +9416,7 @@
           }
         }
       },
-      "JsonElement": {},
+      "JsonElement": { },
       "LimitOverridesDto": {
         "required": [
           "accounts",
@@ -10267,7 +10277,8 @@
           "apple_pay",
           "google_pay",
           "link",
-          "promptpay"
+          "promptpay",
+          null
         ]
       },
       "PaymentOverrideDto": {
